--- a/docker/kafka-single-docker-compose.yaml
+++ b/docker/kafka-single-docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     restart: always
     volumes:
       - /home/docker-data/kafka/zookeeper/data:/data
+    environment:
+      KAFKA_HEAP_OPTS: "-Xms32M -Xmx32M -verbose:gc"
     ports:
       - 4030:2181
 
@@ -19,6 +21,7 @@ services:
       KAFKA_CREATE_TOPICS: "first-topic:1:1"   #kafka启动后初始化一个有2个partition(分区)0个副本名叫 first-topic 的topic
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_HEAP_OPTS : "-Xmx256M -Xms128M"
     volumes:
       - /home/docker-data/kafka/kafka-logs:/kafka
     depends_on:
