--- a/blood-cell-ai-model/detection-and-classification-server/requirements.txt
+++ b/blood-cell-ai-model/detection-and-classification-server/requirements.txt
@@ -1,4 +1,5 @@
 # pip3 install torch torchvision torchaudio
 flask == 2.1.2
+pandas == 1.5.2
 efficientnet_pytorch == 0.7.1
 opencv-python == 4.7.0.68
