--- a/blood-cell-ai-model/detection-and-classification-server/Dockerfile-GPU
+++ b/blood-cell-ai-model/detection-and-classification-server/Dockerfile-GPU
@@ -7,4 +7,4 @@ RUN apt-get install ffmpeg libsm6 libxext6 -y
 RUN pip install -r requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple
 
 EXPOSE 8080
-CMD ["python", "/home/demo2.py"]
+CMD ["python", "flask_server.py", "-c", "config/config-linux-prod.json"]
